# nfc-labeler

./: .editorconfig  CONTRIBUTING.md  LICENSE  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/nfc_labeler/: cli.py
tests/: test_cli.py
